--- a/css/style.css
+++ b/css/style.css
@@ -45,6 +45,43 @@ input[type="text"], input[type="password"], textarea{
 	margin-bottom:12px;
 	padding:11px 11px 11px;
 }
+
+
+
+.slideshow {
+  max-width: 500px;
+  height: auto;
+  margin: 0 auto;
+  overflow: hidden;
+  position: relative;
+}
+.slideshow img {
+  width: 100%;
+  height: auto;
+  display: none;
+}
+.slideshow img.active {
+  display: block;
+}
+.slideshow a {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  font-size: 24px;
+  padding: 10px;
+  background-color: #f2f2f2;
+  text-decoration: none;
+  color: #000;
+  border-radius: 5px;
+}
+.slideshow a.prev {
+  left: 0;
+}
+.slideshow a.next {
+  right: 0;
+}
+
+
 	
 	input[type="text"], input[type="email"], textarea {
 		width:100%;
